edit product admin

--- a/src/app/fcomponents/AdminDialogs/productDialog/productDialog.component.html
+++ b/src/app/fcomponents/AdminDialogs/productDialog/productDialog.component.html
@@ -1,3 +1,27 @@
-<p>
-  productDialog works!
-</p>
+<h2 mat-dialog-title>{{title}}</h2>
+
+<mat-dialog-content>
+    <!-- title -->
+    <div class="form-group">
+        <input  class="form-control"  name="title" placeholder="title *" [(ngModel)]="productForm.title" #title="ngModel">
+     </div>
+     <!-- subtitle -->
+     <div class="form-group">
+        <input class="form-control" name="subTitle" placeholder="subTitle *" [(ngModel)]="productForm.subTitle" #subTitle="ngModel">
+     </div>
+     <!-- total stock -->
+     <div class="form-group">
+        <input class="form-control" type="number" name="totalStock" placeholder="totalStock *" [(ngModel)]="productForm.totalStock" #totalStock="ngModel">
+     </div>
+    <!-- description -->
+    <div class="form-group">
+        <input class="form-control" name="description" placeholder="description *" [(ngModel)]="productForm.description" #description="ngModel">
+    </div>
+
+</mat-dialog-content>
+
+<mat-dialog-actions>
+    <button class="mat-raised-button"(click)="close()">Close</button>
+    <button class="mat-raised-button mat-primary"(click)="save()" *ngIf="status == 'update'">Save</button>
+    <button class="mat-raised-button mat-primary"(click)="create()" *ngIf="status == 'create'" [disabled]="faqForm.Answer == '' || faqForm.Question == ''">Create</button>
+</mat-dialog-actions>
