--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -61,6 +61,7 @@
           <div *ngIf="blockCode == 2"><h2>Hires</h2></div>
           <div *ngIf="blockCode == 3"><h2>Services</h2></div>
           <div *ngIf="blockCode == 4"><h2>Packages</h2></div>
+          <i class="fas fa-plus" (click)="createProduct()"></i>
           <table class="table">
             <thead>
               <tr>
