--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -57,7 +57,7 @@
 
   <div class="mx-auto order-0">
     <a class="nav-link p-0 p-md-1" routerLink='/homepage' routerLinkActive="active">
-      <img class="d-none d-lg-block" src="../../../../assets/images/Asset1-4x-big.png" style="zoom:0.5;" />
+      <img class="d-none d-lg-block" src="../../../../assets/images/Asset1-4x-big.png" style="zoom:0.5;height:9.4rem;" />
       <img class="d-md-block d-lg-none" src="../../../../assets/images/Asset1-4x-mid.png" style="zoom:0.8;" />
     </a>
     <button class="navbar-toggler mr-2" type="button" data-toggle="collapse" data-target=".dual-collapse2"><span
