--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -21,7 +21,7 @@
     </div>
 
     <div *ngIf="prodsInCart.length==0">
-      Your Cart is empty now. Please add some products.
+      You don't have anything in your shopping cart yet! <br>
       <button class="btn btn-outline-gold" routerLink="/hire">View Our Products</button>
     </div>
     <div class="text-right mb-2">
