--- a/src/app/fcomponents/login/login.component.html
+++ b/src/app/fcomponents/login/login.component.html
@@ -25,7 +25,7 @@
     <br>
 
   <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
-
+       {{errorMessage}}
   <br><br><br><br><br>
 </form>
 
