--- a/src/app/fcomponents/products/productList/productList.component.css
+++ b/src/app/fcomponents/products/productList/productList.component.css
@@ -41,8 +41,22 @@ a.dropdown-item:hover{
 .show .btn-secondary.dropdown-toggle{
     color:black;
 }
+img {
+    object-fit: cover;
+}
 .h480{
+    height:580px;
+}
+.h490{
     height:400px;
+}
+.w480{
+    width:400px;
+}
+.autofix{
+	width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 @media (max-width:767px){
     .h480{
