--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -31,10 +31,10 @@
     <div class='col-12 col-sm-6 col-md-4 pt-4 pb-2' *ngFor="let product of allProducts; index as i">
         <div id="carouselExampleFade{{i}}" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
             <a [routerLink] = "['/product/',product.prodId]">
-            <div class="carousel-inner" >
+            <div class="carousel-inner " >
                 <!-- active -->
-              <div class="carousel-item active " *ngFor="let media of product.productMedia">
-                <img src="../../../../assets/Products/{{media.url}}.jpg" class="d-block w-100 h480"/>
+              <div class="carousel-item active overflow-hidden h490" *ngFor="let media of product.productMedia">
+                <img src="../../../../assets/Products/{{media.url}}.jpg" class="d-block autofix"/>
               </div>
               <!-- <div class="carousel-item">
                 <img src="../../../../assets/images/productImg2.jpeg" class="d-block w-100">
