update product page img

--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -4,8 +4,8 @@
   <div class="row my-5">
   <div class="col-12 col-md-6 col-lg-6 p-0">
     <!-- <div (mouseenter)="mouseEnter()" (mouseleave)="mouseLeave()" (mousemove)="mouseMove($event)"> -->
-    <div>
-        <img src="../../../../assets/Products/{{prodMediaUrl}}.jpg" class="d-block w-100" id="small" #small style="height:500px;">
+    <div style="height:500px; overflow: hidden">
+        <img src="../../../../assets/Products/{{prodMediaUrl}}.jpg" class="d-block autofix" id="small" #small>
         <!-- <b id="shadow" #shadow></b> -->
     </div>
     <br>
