--- a/src/app/fcomponents/products/productList/productList.component.css
+++ b/src/app/fcomponents/products/productList/productList.component.css
@@ -41,25 +41,32 @@ a.dropdown-item:hover{
 .show .btn-secondary.dropdown-toggle{
     color:black;
 }
-img {
+.h490{
+    /* height: */
+    position: relative;
+    padding-top: 100%;
+    width:100%;
+    display: block;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+
+.carousel-inner .carousel-item img {
+	position:  absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+    width: 100%;
     object-fit: cover;
 }
-.h480{
-    height:580px;
-}
-.h490{
-    height:400px;
-}
-.w480{
-    width:400px;
-}
+
 .autofix{
 	width: 100%;
     height: 100%;
     object-fit: cover;
 }
 @media (max-width:767px){
-    .h480{
-        height:300px;
-    }
+
+
 }
