--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -28,20 +28,14 @@
     </div>
   <!-- display products -->
   <div class="row py-3">
-    <div class='col-12 col-sm-6 col-md-4 pt-4 pb-2' *ngFor="let product of allProducts; index as i">
+    <div class='col-12 col-sm-6 col-md-6 col-lg-4 pt-4 pb-2' *ngFor="let product of allProducts; index as i">
         <div id="carouselExampleFade{{i}}" class="carousel slide carousel-fade" data-ride="carousel" data-interval="false">
             <a [routerLink] = "['/product/',product.prodId]">
-            <div class="carousel-inner " >
+            <div class="carousel-inner" >
                 <!-- active -->
               <div class="carousel-item active overflow-hidden h490" *ngFor="let media of product.productMedia">
                 <img src="../../../../assets/Products/{{media.url}}.jpg" class="d-block autofix"/>
               </div>
-              <!-- <div class="carousel-item">
-                <img src="../../../../assets/images/productImg2.jpeg" class="d-block w-100">
-              </div>
-              <div class="carousel-item">
-                <img src="../../../../assets/images/productImg3.png" class="d-block w-100">
-              </div> -->
             </div>
             </a>
             <a class="carousel-control-prev" href="#carouselExampleFade{{i}}" role="button" data-slide="prev">
@@ -53,7 +47,7 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-      <h1><a [routerLink] = "['/product/',product.prodId]" class="m1">{{product.title}}</a></h1>
+          <h1><a [routerLink] = "['/product/',product.prodId]" class="m1">{{product.title}}</a></h1>
       <div class="row"><div class="s2gold col-4">$ {{product.price}}</div><div class="s2 col-6">Hired: 12</div></div>
     </div>
   </div>
