--- a/src/app/fcomponents/products/product/product.component.css
+++ b/src/app/fcomponents/products/product/product.component.css
@@ -30,6 +30,26 @@ a{
     text-decoration: none;
     cursor: pointer;
 }
+.h490{
+    /* height: */
+    position: relative;
+    padding-top: 100%;
+    width:100%;
+    display: block;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+
+.prodImg img {
+	position:  absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+    width: 100%;
+    object-fit: cover;
+}
+
 .autofix{
 	width: 100%;
     height: 100%;
