--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -21,8 +21,12 @@
     </div>
 
     <div *ngIf="prodsInCart.length==0">
-      You don't have anything in your shopping cart yet! <br>
-      <button class="btn btn-outline-gold" routerLink="/hire">View Our Products</button>
+      <br>
+      <br>
+      <span class="s2">You don't have anything in your shopping cart yet!</span> <br>
+      <button class="btn btn-outline-gold mt-3" routerLink="/hire">View Our Products</button>
+      <br>
+      <br>
     </div>
     <div class="text-right mb-2">
       Total Price: $<span class="s2bold">{{totalPrice}}</span>
