--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -40,6 +40,9 @@ a{
 .nav-link, .s2bold > h1 {
     font-size: 0.8rem;
 }
+.dropdown-menu{
+    border:0px;
+}
 @media (min-width: 768px) {
     .dropdown-menu li:hover .sub-menu {
         visibility: visible;
@@ -48,8 +51,14 @@ a{
         display: block;
    }
 }
- @media (max-width: 991px) {
-.s2bold > h1 {
-    font-size:0.5rem;
+@media (max-width:768px){
+    .dropdown-menu{
+        background-color: transparent;
+    }
 }
+/* TODO: move to global css */
+@media (max-width: 991px) {
+    .s2bold > h1 {
+        font-size:0.5rem;
+    }
 }
